--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
               <a href="tel:+256706743910">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +256 706 743910
+                  Call +256740009816/+256782781126
                 </span>
               </a>
               
