--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
       <div class="row">
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/maw1.jpg" alt="">
+            <img src="images/fm4.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-6">
@@ -143,8 +143,9 @@
               Sky Fish Maw Investments Ltd
             </a>
             <p>
-              Sky Fish Maw Investments Ltd is a trusted leader in sourcing and supplying premium fish maw products. With our extensive expertise and commitment to quality, we provide clients with the finest fish maw, renowned for its rich nutritional benefits and culinary versatility. Partner with us and discover the difference that comes from working with the best in the industry.
-            </p>            
+              Sky Fish Maw Investments Ltd specializes in sourcing and supplying premium fish maw. Our commitment to quality ensures rich nutritional benefits and culinary versatility. Partner with us for unmatched excellence.
+            </p>
+            
             <div class="footer_social">
               <a href="">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -179,7 +180,7 @@
       <div class="footer-info">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-         Free Html Templates<br><br>
+          Sky Fish Maw Investments Ltd<br><br>
        
         </p>
       </div>
